# models/user.go
@@ -6,12 +6,3 @@ type User struct {
 	Email       string `json:"email,omitempty"`
 	Address     string `json:"address,omitempty"`
 }
-
-type LoginRequest struct {
-	PhoneNumber string `json:"phoneNumber" binding:"required"`
-}
-
-type LoginResponse struct {
-	Token string `json:"token"`
-	User  User   `json:"user"`
-}
